--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Built application files
 *.apk
 *.ap_
-*.aab
+*.aab.
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -17,6 +17,7 @@ out/
 # Gradle files
 .gradle/
 build/
+build.gradle
 
 # Local configuration file (sdk path, etc)
 local.properties
