--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:configChanges="orientation"
+        android:screenOrientation="portrait"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Solicitudes.Solicitudes" ></activity>
+        <activity android:name=".Solicitudes.Solicitudes" />
         <activity android:name=".Perfil.Perfil" />
         <activity android:name=".MisClases.MisClases" />
         <activity android:name=".Inicio.Inicio" />
@@ -17,7 +19,6 @@
         <activity android:name=".Bienvenida.Bienvenida" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
