--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -18,6 +19,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Solicitudes.Solicitudes" android:launchMode="singleInstance"/>
         <activity android:name=".Perfil.Perfil" android:launchMode="singleInstance"/>
+        <activity android:name=".Inicio.InicioFragments.InicioMapaFragmen" android:launchMode="singleInstance"/>
         <activity android:name=".MisClases.MisClases" android:launchMode="singleInstance"/>
         <activity android:name=".Inicio.Inicio" android:launchMode="singleInstance"/>
         <activity android:name=".Chat.Chat" android:launchMode="singleInstance"/>
