--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.1.0'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
+    implementation 'com.github.ar-android:AndroidSvgLoader:1.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
