--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,31 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:configChanges="orientation"
-        android:screenOrientation="portrait"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Solicitudes.Solicitudes" android:launchMode="singleInstance"/>
-        <activity android:name=".Perfil.Perfil" android:launchMode="singleInstance"/>
-        <activity android:name=".Inicio.InicioFragments.InicioMapaFragmen" />
-        <activity android:name=".MisClases.MisClases" android:launchMode="singleInstance"/>
-        <activity android:name=".Inicio.Inicio" android:launchMode="singleInstance"/>
-        <activity android:name=".Chat.Chat" android:launchMode="singleInstance"/>
-        <activity android:name=".Bienvenida.Bienvenida">
+        <activity android:name=".Solicitudes.Solicitudes"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Perfil.Perfil"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Inicio.InicioFragments.InicioMapaFragmen"
+            android:screenOrientation="portrait" />
+        <activity android:name=".MisClases.MisClases"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Inicio.Inicio"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity android:name=".Chat.Chat"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Bienvenida.Bienvenida"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
